# miniblog

./: .gitignore  .pre-commit-config.yaml  app.py  pyproject.toml
note_repo/: dependencies.py  main.py
note_repo/routes/: author.py  note.py
note_repo/schemas/: db.py
