[tool.poetry]
name = "note-repo"
version = "0.1.0"
description = ""
authors = ["Gianfranco Damato <gianfranco.damato90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
psycopg = {extras = ["binary"], version = "^3.2.3"}

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.30.0"
ruff = "^0.7.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
